--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -18,6 +18,9 @@ python-dotenv = "^1.0.0"
 asyncpg = "^0.27.0"
 
 [tool.poetry.dev-dependencies]
+black = "^23.3.0"
+flake8 = "^6.0.0"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
