--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2-binary = "^2.9.6"
 redis = "^4.5.4"
 python-dotenv = "^1.0.0"
 asyncpg = "^0.27.0"
+sqlalchemy-utils = "^0.41.1"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
